CrOS shelf: extend background to handle overdrag in any condition

Before this CL, we already extend the shelf's opaque background a
bit off screen, so that "over-drag" events don't appear to be tearing
off the shelf from the screen edge.

This CL extends this behavior to "fullscreen" mode (shelf is a little
darker, and has square corners) so that there too we prevent a tearing
effect.

Bug: 911880
Change-Id: I0e91c83824417027060c75ccdd8fdcf1bdb3ffb5
Reviewed-on: https://chromium-review.googlesource.com/c/1382446
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Manu Cornet <manucornet@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617514}
Former-commit-id: d38df253571d4c4394c3454353ebc0b7442e95a6